--- a/public/header.html
+++ b/public/header.html
@@ -1,11 +1,9 @@
-<a id="shead" href="/">
+<a id="shead" href="/#zh">
     <img src="/pictures/shead.png">
 </a>
 <nav>
-    <a class="navb" href="/blog/">記事 Blog</a>
-    <!--
-    <a class="navb">文章 Articles</a>
-    -->
-    <a class="navb" href="/about/">關於 About</a>
-    <a class="navb" href="/contact/">聯絡 contact</a>
+    <a class="navb zhwb" href="/blog/">記事</a>
+    <a class="navb zhw" style="display: none;">文章</a>
+    <a class="navb zhwb" href="/about/">關於</a>
+    <a class="navb zhwb" href="/contact/">聯絡</a>
 </nav>
