--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>BlueBoy's Space</title>
     <link rel="preload" href="/pictures/homepage_bg.jpg" as="image">
-    <link rel="preload" href="/scripts/countdownSUBARU.js">
-    <link rel="preload" href="/scripts/countdownGSAT.js">
+    <link rel="stylesheet" href="/styles/index.css"><!-- media="screen and (min-width: 992px)"-->
+    <!--link rel="stylesheet" href="/styles/index-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)"-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/scripts/include.js"></script>
     <script>include('Index')</script>
+    <script src="/scripts/lang.js"></script>
 </head>
-<body bgcolor="#81D8D0">
+<body style="background-image: url(/pictures/homepage_bg.jpg);background-size: cover;background-position: bottom;background-repeat: no-repeat;">
     <header>
         <div id="hometitle">
-            <p class="enw">BlueBoy's Space</p>
+            <p class="enwt">BlueBoy's Space</p>
         </div>
         <div id="in-link-button">
-            <a class="inb" href="/blog/">記事 Blog</a>
-            <!--
-            <a class="inb">文章 Articles</a>
-            -->
-            <a class="inb" href="/about/">關於 About</a>
-            <a class="inb" href="/contact/">聯絡 Contact</a>
+            <a class="inb zhwb" id="blogbt" href="/blog/">記事</a>
+            <a class="inb zhwb" id="aboutbt" href="/article/" style="display: none;">文章</a>
+            <a class="inb zhwb" id="aboutbt" href="/about/">關於</a>
+            <a class="inb zhwb" id="contactbt" href="/contact/">聯絡</a>
+        </div>
+        <div id="in-link-button-en" style="display: none;">
+            <a class="inb enw" id="blogbt" href="/en/blog/">Blog</a>
+            <a class="inb enw" id="aboutbt" href="/en/article/" style="display: none;">Articles</a>
+            <a class="inb enw" id="aboutbt" href="/en/about/" style="display: none;">About</a>
+            <a class="inb enw" id="contactbt" href="/en/contact/">Contact</a>
         </div>
         <div id="out-link-button">
             <a href="https://twitter.com/summit_AMT" target="_blank" class="outb" aria-label="Twitter" title="My Twitter">
@@ -38,68 +45,19 @@
                     <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
                 </svg>
             </a>
-            <a class="outb" href="/about/site" title="關於本站 About Site">
+            <a class="outb" id="siteinfobt" href="/about/site.html" title="本站資訊">
                 <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48">
                     <path d="M483.175 776q12.825 0 21.325-8.625T513 746V566q0-12.75-8.675-21.375-8.676-8.625-21.5-8.625-12.825 0-21.325 8.625T453 566v180q0 12.75 8.675 21.375 8.676 8.625 21.5 8.625Zm-3.193-314q14.018 0 23.518-9.2T513 430q0-14.45-9.482-24.225-9.483-9.775-23.5-9.775-14.018 0-23.518 9.775T447 430q0 13.6 9.482 22.8 9.483 9.2 23.5 9.2Zm.284 514q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80 658.319 80 575.5q0-82.819 31.5-155.659Q143 347 197.5 293t127.341-85.5Q397.681 176 480.5 176q82.819 0 155.659 31.5Q709 239 763 293t85.5 127Q880 493 880 575.734q0 82.734-31.5 155.5T763 858.316q-54 54.316-127 86Q563 976 480.266 976Z"/>
                 </svg>
             </a>
-            <!--
-            <a class="outb" href="/en/" title="Language: English">
+            <a class="outb" id="langbt" title="Language: English" onclick="language('en');">
                 <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48">
                     <path d="M480 976q-84 0-157-31.5T196 859q-54-54-85-127.5T80 574q0-84 31-156.5T196 291q54-54 127-84.5T480 176q84 0 157 30.5T764 291q54 54 85 126.5T880 574q0 84-31 157.5T764 859q-54 54-127 85.5T480 976Zm0-58q35-36 58.5-82.5T577 725H384q14 60 37.5 108t58.5 85Zm-85-12q-25-38-43-82t-30-99H172q38 71 88 111.5T395 906Zm171-1q72-23 129.5-69T788 725H639q-13 54-30.5 98T566 905ZM152 665h159q-3-27-3.5-48.5T307 574q0-25 1-44.5t4-43.5H152q-7 24-9.5 43t-2.5 45q0 26 2.5 46.5T152 665Zm221 0h215q4-31 5-50.5t1-40.5q0-20-1-38.5t-5-49.5H373q-4 31-5 49.5t-1 38.5q0 21 1 40.5t5 50.5Zm275 0h160q7-24 9.5-44.5T820 574q0-26-2.5-45t-9.5-43H649q3 35 4 53.5t1 34.5q0 22-1.5 41.5T648 665Zm-10-239h150q-33-69-90.5-115T565 246q25 37 42.5 80T638 426Zm-254 0h194q-11-53-37-102.5T480 236q-32 27-54 71t-42 119Zm-212 0h151q11-54 28-96.5t43-82.5q-75 19-131 64t-91 115Z"/>
                 </svg>
             </a>
-            -->
         </div>
-        <a href="#main" id="down">
-            <p class="material-symbols-outlined">expand_more</p>
-        </a>
+        <script>language()</script>
     </header>
-    <main>
-        <div id="main"><br></div>
-        <div id="newpost">
-            <div class="pagesubtitle">
-                <p>
-                    <span class="zhw">最新文章 </span>
-                    <span class="enw">New post</span>
-                </p>
-            </div>
-            <div class="content" style="display: flex; align-items: center; justify-content: center;">
-                <table id="newpostblock">
-                    <tr>
-                        <td class="time enw">2023-03-27</td>
-                        <td class="posttitle zhwb">測試</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-        <div id="countdown">
-            <div class="pagesubtitle">
-                <p>
-                    <span class="zhw">事件倒數 </span>
-                    <span class="enw">Countdown</span>
-                </p>
-            </div>
-            <div class="countdown">
-                <script async src="/scripts/countdownGSAT.js"></script>
-                <a data-type="countdown" data-id="3886391" class="tickcounter" style="display: block; width: 100%;" title="Countdown" href="//www.tickcounter.com/">
-                    Countdown(113GSAT)
-                </a>
-            </div>
-            <div class="countdown">
-                <script async src="/scripts/countdownSUBARU.js"></script>
-                <a data-type="countdown" data-id="3885131" class="tickcounter" style="display: block; width: 100%; " title="Countdown" href="//www.tickcounter.com/">
-                    Countdown(oozora_subaru_BD)
-                </a>
-            </div>
-        </div>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
-        <!-- 橫幅 -->
-        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9189513725790874" data-ad-slot="1116221023" data-ad-format="auto" data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </main>
     <footer></footer>
 </body>
 </html>
