--- a/public/header-en.html
+++ b/public/header-en.html
@@ -4,6 +4,5 @@
 <nav>
     <a class="navb enw1" href="/en/blog/">Blog</a>
     <a class="navb enw1" href="/en/article/" style="display: none;">Articles</a>
-    <a class="navb enw1" href="/en/about/" style="display: none;">About</a>
-    <a class="navb enw1" href="/en/contact/">Contact</a>
+    <a class="navb enw1" href="/en/about/">About</a>
 </nav>
