--- a/404.html
+++ b/404.html
@@ -10,13 +10,13 @@
         <div class="pagehead" style="height: 100%;background-image: url(/pictures/404_bg.png);">
             <p class="pagetitle enw1" style="text-align: center;">
                 404 Not Found<br>
-                <span class="zhwb" style="font-size: 25px;"><span id="countdown">3</span>秒後自動回到上一頁<br></span>
-                <span style="font-size: 25px;">Automatically go back to the previous page after <span id="countdownen">3</span> seconds.</span>
+                <span class="zhwb" style="font-size: 25px;"><span id="countdown"></span>秒後自動回到上一頁<br></span>
+                <span style="font-size: 25px;">Automatically go back to the previous page after <span id="countdownen"></span> seconds.</span>
             </p>
         </div>
     </main>
     <footer></footer>
-    <script>
+    <script defer>
         function countdown() {
             var seconds = 3;
             var countdownInterval = setInterval(function() {
