--- a/about/project.html
+++ b/about/project.html
@@ -1,108 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/scripts/include.js"></script>
-    <script>include('About')</script>
+    <script>include('Project')</script>
 </head>
 <body bgcolor="#81D8D0">
     <header></header>
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="material-symbols-outlined" id="back"> <a href="/about/">chevron_left</a> </span>
-                <span class="zhwb">我的專案 </span>
-                <span class="enw1">My Projects</span>
+                <span class="material-symbols-outlined" id="back"> <a href="/about/#project">chevron_left</a> </span>
+                <span class="zhwb">我的專案</span>
             </p>
         </div>
         <p id="backarrow"></p>
         <div id="aboutpro">
             <div class="pagesubtitle" id="project">
                 <p>
-                    <span class="zhwb">個人專案 </span>
-                    <span class="enw1">Personal Projects</span>
+                    <span class="zhwb">個人專案</span>
                 </p>
             </div>
             <div class="content" id="projectc">
                 <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
                     <div class="problock">
-                        <div class="proimage">
-                            <img src="/pictures/project_use/YTdownload.png" alt="thumbnail" title="YouTube Video Downloader">
-                        </div>
-                        <div class="procontent">
-                            <p class="protitle">
-                                <span class="prozhtitle zhw">YouTube影片下載器 <wbr></span>
-                                <span class="proentitle enw2">YouTube Video Downloader</span>
-                            </p>
-                            <p class="probrief">
-                                <span class="zhw">
-                                    一款能免費以最高畫質下載YouTube影片的下載器。<br>
-                                    #Python # pytube #Tkinter<br>
-                                </span>
-                                <span class="enw2">
-                                    A free YouTube video downloader that allows downloading videos in the highest quality.<br>
-                                    #Python # pytube #Tkinter
-                                </span>
-                            </p>
-                        </div>
+                        <img src="/pictures/project_use/YTdownload.png" class="proimage" alt="thumbnail" title="YouTube影片下載器">
+                        <div class="protitle zhw">YouTube影片下載器</div>
+                        <div class="probrief zhw">一款能免費以最高畫質下載YouTube影片的下載器。</div>
+                    </div>
+                </a>
+                <a href="https://github.com/BlueBoy247/Event-Countdown-Discord-Bot" target="_blank">
+                    <div class="problock">
+                        <img src="/pictures/project_use/EventCountdownDCBot.png" class="proimage" alt="thumbnail" title="事件倒數Discord Bot">
+                        <div class="protitle zhw">事件倒數Discord Bot</div>
+                        <div class="probrief zhw">能每日傳送事件倒數訊息至指定伺服器之指定頻道的DC Bot，且能提及指定的身分組。</div>
                     </div>
                 </a>
                 <a href="https://blueboy247.github.io/" target="_blank">
                     <div class="problock">
-                        <div class="proimage">
-                            <img src="/pictures/project_use/PW.png" alt="thumbnail" title="My Personal Website">
-                        </div>
-                        <div class="procontent">
-                            <p class="protitle">
-                                <span class="prozhtitle zhw">我的個人網站 <wbr></span>
-                                <span class="proentitle enw2">My Personal Website</span>
-                            </p>
-                            <p class="probrief">
-                                <span class="zhw">
-                                    由我自己建置的個人網站，也就是你現在所在的網站。<br>
-                                    #HTML #CSS #JavaScript #GitHub_Pages<br>
-                                </span>
-                                <span class="enw2">
-                                    The personal website that was built by myself, which is the website you are currently on!<br>
-                                    #HTML #CSS #JavaScript #GitHub_Pages
-                                </span>
-                            </p>
-                        </div>
-                    </div>
-                </a>
-                <a href="/" target="_blank" style="display: none;">
-                    <div class="problock">
-                        <div class="protitle">
-                            <p class="prozhtitle zhw">標題</p>
-                            <p class="proentitle enw2">Title</p>
-                        </div>
-                        <div class="proimage">
-                            <img src="/" alt="thumbnail" title="">
-                        </div>
-                        <div class="procontent">
-                            <p class="probrief">
-                                <span class="zhw">中文敘述<br></span>
-                                <span class="enw2">English introduce</span>
-                            </p>
-                        </div>
-                    </div>
-                </a>
-                <a href="/" target="_blank" style="display: none;">
-                    <div class="problock">
-                        <div class="protitle">
-                            <p class="prozhtitle zhw">標題</p>
-                            <p class="proentitle enw2">Title</p>
-                        </div>
-                        <div class="proimage">
-                            <img src="/" alt="thumbnail" title="">
-                        </div>
-                        <div class="procontent">
-                            <p class="probrief">
-                                <span class="zhw">中文敘述<br></span>
-                                <span class="enw2">English introduce</span>
-                            </p>
-                        </div>
+                        <img src="/pictures/project_use/PW.png" class="proimage" alt="thumbnail" title="我的個人網站">
+                        <div class="protitle zhw">我的個人網站</div>
+                        <div class="probrief zhw">由我自己建置的個人網站，也就是你現在所在的網站。</div>
                     </div>
                 </a>
             </div>
